# openmethod

./: .drone.jsonnet  .gitignore  CLAUDE.md  CMakeLists.txt  announce.md  notes.txt  t.txt
.claude/: settings.json
.github/workflows/: ci.yml
doc/: build_antora.sh  mrdocs.yml  refresh_mrdocs_cache.sh
doc/modules/ROOT/examples/shared_libs/: CMakeLists.txt  animals.hpp  dynamic_main.cpp  extensions.cpp  indirect_extensions.cpp  indirect_main.cpp  static_extensions.cpp  static_main.cpp
doc/modules/ROOT/pages/: BOOST_OPENMETHOD_EXPORT_DEFAULT_REGISTRY.adoc  BOOST_OPENMETHOD_EXPORT_INDIRECT_REGISTRY.adoc  BOOST_OPENMETHOD_IMPORT_DEFAULT_REGISTRY.adoc  BOOST_OPENMETHOD_IMPORT_INDIRECT_REGISTRY.adoc  headers.adoc  ref_macros.adoc  registries_and_policies.adoc  shared_libraries.adoc
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-chardet/python39-chardet/: python39-chardet-5.2.0-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-docutils/python39-docutils/: python39-docutils-0.22.4-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-filelock/python39-filelock/: python39-filelock-3.17.0-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-idna/python39-idna/: python39-idna-3.11-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-imagesize/python39-imagesize/: python39-imagesize-1.3.0-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-importlib-metadata/python39-importlib-metadata/: python39-importlib-metadata-8.7.1-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-iniconfig/python39-iniconfig/: python39-iniconfig-2.0.0-2.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-jinja2/python39-jinja2/: python39-jinja2-3.1.6-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-olefile/python39-olefile/: python39-olefile-0.47-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-packaging/python39-packaging/: python39-packaging-25.0-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-pip/python39-pip/: python39-pip-26.0.1-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-platformdirs/python39-platformdirs/: python39-platformdirs-4.4.0-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-pluggy/python39-pluggy/: python39-pluggy-1.6.0-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-pygments/python39-pygments/: python39-pygments-2.19.2-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-pytest/python39-pytest/: python39-pytest-8.3.4-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-requests/python39-requests/: python39-requests-2.32.5-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/python-sphinx/python39-sphinx/: python39-sphinx-4.4.0-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/noarch/release/tzdata/: tzdata-2026a-1-noarch.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/cygwin/: cygwin-3.6.7-1-x86_64.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/desktop-file-utils/: desktop-file-utils-0.28-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/python3/: python3-3.9.16-1.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/tzcode/: tzcode-2026a-1-x86_64.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/w32api-runtime/: w32api-runtime-14.0.0-1-x86_64.tar.xz
https%3a%2f%2fmirrors.kernel.org%2fsourceware%2fcygwin%2f/x86_64/release/windows-default-manifest/: windows-default-manifest-6.5-1-x86_64.tar.xz
include/boost/openmethod/: core.hpp  default_registry.hpp  initialize.hpp  macros.hpp  preamble.hpp
include/boost/openmethod/detail/: ostdstream.hpp
include/boost/openmethod/interop/: std_any.hpp
include/boost/openmethod/policies/: default_error_handler.hpp  fast_perfect_hash.hpp  stderr_output.hpp  vptr_map.hpp  vptr_vector.hpp
test/: CMakeLists.txt  Jamfile  test_capture_errors.hpp  test_class_registration_missing_base_class.cpp  test_class_registration_own_state.cpp  test_class_registration_unknown_class_call.cpp  test_class_registration_unknown_class_overrider.cpp  test_compiler.cpp  test_core.cpp  test_custom_rtti.cpp  test_custom_rtti_deferred.cpp  test_custom_rtti_simple.cpp  test_custom_rtti_simple_projection.cpp  test_custom_rtti_virtual_base.cpp  test_dispatch_across_namespaces.cpp  test_dispatch_comma_in_return_type.cpp  test_dispatch_lvalue_refs.cpp  test_dispatch_multi.cpp  test_dispatch_next_fn.cpp  test_dispatch_pointer.cpp  test_dispatch_rvalue_refs.cpp  test_dispatch_shared_ptr_by_ref.cpp  test_dispatch_shared_ptr_by_value.cpp  test_dispatch_unique_ptr.cpp  test_n2216_covariant_return_type.cpp  test_n2216_pick_any_ambiguous.cpp  test_rolex.cpp  test_runtime_errors.cpp  test_runtime_errors_bad_call.cpp  test_runtime_errors_bad_call_type_ids.cpp  test_runtime_errors_bad_call_type_ids_smart_ptr.cpp  test_runtime_errors_call_unknown_class.cpp  test_runtime_errors_duplicate_overrider.cpp  test_runtime_errors_initialize_unknown_class.cpp  test_runtime_errors_no_initialization.cpp  test_runtime_errors_throw_error.cpp  test_shared_virtual_ptr_dispatch.cpp  test_util.hpp  test_virtual_ptr_by_ref.cpp  test_virtual_ptr_dispatch.cpp  (+5 more)
test/cmake_test/: CMakeLists.txt
test/dynamic_loading/: CMakeLists.txt  Jamfile  classes.hpp  get_ids.hpp  main.cpp  method.cpp  method.hpp  overrider.cpp  registry.cpp  registry.hpp  shared_overrider.hpp  t.cpp
test/mix_release_debug/: lib.cpp
(+41 files in other folders)
